; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_pull_down.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_musb_otg.c_musbotg_pull_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.musbotg_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.musbotg_softc*)* @musbotg_pull_down to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @musbotg_pull_down(%struct.musbotg_softc* %0) #0 {
  %2 = alloca %struct.musbotg_softc*, align 8
  store %struct.musbotg_softc* %0, %struct.musbotg_softc** %2, align 8
  %3 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %4 = getelementptr inbounds %struct.musbotg_softc, %struct.musbotg_softc* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %10 = getelementptr inbounds %struct.musbotg_softc, %struct.musbotg_softc* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  %12 = load %struct.musbotg_softc*, %struct.musbotg_softc** %2, align 8
  %13 = call i32 @musbotg_pull_common(%struct.musbotg_softc* %12, i32 0)
  br label %14

14:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @musbotg_pull_common(%struct.musbotg_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
